--- a/frontend/body_data.html
+++ b/frontend/body_data.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="#">FITNESS JOURNAL</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'add_body_data' %}">Add Body Data</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
                     <li class="nav-item"><a class="btn btn-outline-light" href="{% url 'index' %}">Logout</a></li>
                 </ul>
             </div>
