--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -69,7 +69,7 @@
                     data: {
                         labels: data.body_data.map(entry => entry.date),
                         datasets: [{
-                            label: 'Weight',
+                            label: 'Body Weight Gained',
                             data: data.body_data.map(entry => entry.weight),
                             borderColor: 'rgba(255, 99, 132, 1)',
                             fill: false
@@ -83,7 +83,7 @@
                     data: {
                         labels: data.meals.map(entry => entry.date),
                         datasets: [{
-                            label: 'Calories',
+                            label: 'Calories in meals',
                             data: data.meals.map(entry => entry.calories),
                             backgroundColor: 'rgba(54, 162, 235, 0.2)',
                             borderColor: 'rgba(54, 162, 235, 1)',
@@ -112,7 +112,7 @@
                     data: {
                         labels: data.workouts.map(entry => entry.date),
                         datasets: [{
-                            label: 'Weight Lifted (kg)',
+                            label: 'Workout Weight (kg)',
                             data: data.workouts.map(entry => entry.weight),
                             backgroundColor: 'rgba(153, 102, 255, 0.2)',
                             borderColor: 'rgba(153, 102, 255, 1)',
