added missing planning management module

--- a/frontend/training_records.html
+++ b/frontend/training_records.html
@@ -54,7 +54,10 @@
                         <td>{{ record.reps }}</td>
                         <td>{{ record.weight }} kg</td>
                         <td>{{ record.date }}</td>
-                        <td><a href="#" class="btn btn-info btn-sm">View Details</a></td>
+                        <td><a class="btn btn-primary">Edit</a>
+                            <a class="btn btn-secondary">Delete</a>
+                        
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
