--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Dashboard</title>
-    <link rel="stylesheet" href="{% static 'dashboardyy.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -21,6 +21,8 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'diet_log' %}">Diet Log</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'sleep_records' %}">Sleep Records</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'body_data' %}">Body Data</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'training_plans' %}">Planning Mgmt</a></li>
+
                 <li class="nav-item"><a class="btn-logout" href="{% url 'index' %}">Logout</a></li>
             </ul>
        
@@ -69,7 +71,7 @@
                     data: {
                         labels: data.body_data.map(entry => entry.date),
                         datasets: [{
-                            label: 'Body Weight Gained',
+                            label: 'Weight',
                             data: data.body_data.map(entry => entry.weight),
                             borderColor: 'rgba(255, 99, 132, 1)',
                             fill: false
@@ -83,7 +85,7 @@
                     data: {
                         labels: data.meals.map(entry => entry.date),
                         datasets: [{
-                            label: 'Calories in meals',
+                            label: 'Calories',
                             data: data.meals.map(entry => entry.calories),
                             backgroundColor: 'rgba(54, 162, 235, 0.2)',
                             borderColor: 'rgba(54, 162, 235, 1)',
@@ -112,7 +114,7 @@
                     data: {
                         labels: data.workouts.map(entry => entry.date),
                         datasets: [{
-                            label: 'Workout Weight (kg)',
+                            label: 'Weight Lifted (kg)',
                             data: data.workouts.map(entry => entry.weight),
                             backgroundColor: 'rgba(153, 102, 255, 0.2)',
                             borderColor: 'rgba(153, 102, 255, 1)',
